--- a/app/static/css/navbar.css
+++ b/app/static/css/navbar.css
@@ -385,9 +385,6 @@
 
 #pageRangeItems {
   max-width: 160px;
-  float: left;
-  position: fixed;
-  margin-top:2em;
 }
 
 #pageRangeItems div {
